--- a/my-App/index.html
+++ b/my-App/index.html
@@ -7,6 +7,9 @@
     <title>Recipe and Meal Planner</title>
   </head>
   <body>
+    <header>
+      <img src="/public/images/logo.jpg" alt="logo">
+    </header>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
